[package]
authors = ["oleiade <theo@crevon.me>"]
categories = ["parsing", "text-processing", "date-and-time"]
edition = "2018"
keywords = ["duration", "parsing", "text-processing", "date", "time"]
license = "MIT"
name = "jackdauer"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
nom = "6"
